app/styles/style.default.css
/* ... */
.tree li a{
  height: 100px;
  width: 200px;
  padding: 5px 10px;
  text-decoration: none;
  background-color: white;
  color: #8b8b8b;
  font-family: arial, verdana, tahoma;
  font-size: 11px;
  display: inline-block;
  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
  -transition: all 0.5s;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  cursor: pointer;
}

.btn-default1{ border:1px solid #ccc; width:24%; margin-right:1%;white-space: normal;}
.btn-default1:active, .btn-default1.active, .open > .dropdown-toggle.btn-default1{ border:1px solid #ccc !important; background:#FC0;}

.table-wrapper {
  overflow: auto;
}

.table-content {
    white-space: nowrap;
    overflow: hidden;
}

.table-content .table {
  display: inline-table;
  margin-bottom: 0;
}

.total-signup{
  background: #FC0;
  text-align: center;
  font-size: 16px;
  padding: 5px;
  border-radius: 30px;
  color: #fff !important;
  font-weight: bold;
}

.overall-signup {
  overflow-x: hidden;
}

.transaction_heading {
  width: 50% !important;
}

.main-header{
  border-bottom: 1px solid #eee;
  padding-bottom: 10px;
  height: 1p0px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.03);
  float: left;
  width: 100%;
  margin-bottom: 30px;
}

.ajax_loader {
    cursor: wait;
    opacity: 0.75;
    position: absolute;
    z-index: 999;
    content: "Please Wait ... ";
    background: #ffffff url("../images/loading.gif") no-repeat center center;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
}

.ajax_loader:before {
    content: "Please Wait ...  ";
    top: 55%;
    position: absolute;
    text-align: center;
    width: 100%;
    display: block;
}

.custom_day {
  float: right;
  padding: 29% 5% 0 0 !important;
}

.custom_date {
    float: left;
}

.mobile-scroll{ overflow-x: hidden;}

.banner-section {
  margin-bottom: 30px;
  border-bottom: 1px solid #eee;
  padding: 0 0 20px 0;
}

.pagination-default {
  float: right;
}

.coming-soon-wrapper {
  width: 93%;
  position: fixed;
  top: 30%;
  z-index: 999;
}

.default-error {
  position: relative;
  text-align: right;
  right: 115px;
  top: 5px;
  color: #a94442;
}

.ui-tooltip.ui-widget.ui-corner-all.ui-widget-content {
    display: none;
}

.coming-soon {
  margin-top: 0;
  position: relative;
  top: 20%;
  z-index: 9999;
}

table.md-table th.md-column {
    color:#fff !important;
}

th.md-checkbox-column .md-default-theme:not(.md-checked) .md-icon, th md-checkbox:not(.md-checked) .md-icon {
    border-color: #fff !important;
}

.copy-btn{background:#fff; color:#000; font-size:12px; padding:4px; border:1px solid #000; border-bottom:2px solid #000; border-radius:3px; margin-top:-3px;}

.select {
  position: absolute;
  z-index: 9;
  top: 12px;
  right: 6px;
}

.lg-icon{ font-size:22px; padding-top:5px;}

.custom-select {
  position: absolute;
  z-index: 9;
  top: 37px;
  right: 20px;
}

.navbar-header {
  position: relative;
}

select {
  -webkit-appearance: none;
}

.content-opacity{
  opacity: 0.1;
}

.no-radius {
  border-radius: 0;
}

#nav a.highlite {
  background-color: #ffd803;
  display: block;
}

.no-arrow:before {
    content: '';
    border: 0;
}

.error-padding {
  position: relative;
  z-index: 99;
}

.fileUpload {
  margin-bottom: 0.5%;
  position: relative;
  overflow: hidden;
}

.upload {
  cursor: pointer;
  filter: alpha(opacity=0);
  font-size: 26px;
  margin: 0;
  opacity: 0;
  padding: 0;
  position: absolute;
  left: 0;
  top: 0;
}

.error-abs {
  position: absolute !important;
  width: 250px;
}

.support-image {
  width: 500px;
}

.userid::-webkit-input-placeholder {
    color: #A9A9A9;
}

.userid:-moz-placeholder {
    color: #A9A9A9;
}

.userid::-moz-placeholder {
    color: #A9A9A9;
}

.userid:-ms-input-placeholder {
    color: #A9A9A9;
}

.mail-box-steps {
  max-height: 750px;
}

.custom-breadcrumb {
  margin: -2px 0 0 0 !important;
  font-size: 28px !important;
  font-weight: 500;
  color: #2f363d !important;
  line-height: normal !important;
}

.media>.pull-left {
    margin-right: 10px;
}

.verifyemail-body {
  padding: 80px 40px !important;
}

.error-padding {
  padding: 5px 10px;
}

.verifyemail-body h4, .verifyemail-body h5 {
  font-weight: 400;
}

.step4 {
  float: left;
  width: 500px;
}

.step5 {
  position: relative;
  top: -100px;
  width: 500px;
}

.coming-soon {
  font-family: 'Roboto';
  font-weight: 300;
  font-size: 21px;
}

.mb37{font-size:30px !important; margin-bottom:70px; width:30%; margin:auto;  font-family: 'Oswald', sans-serif; border-bottom:5px solid #fc0;  padding-bottom:10px !important; color: #999; text-transform:uppercase;  }

.yellow-border {
  margin-bottom: 70px;
  width: 385px;
  margin: auto;
  border-bottom: 5px solid #fc0;
  padding-bottom: 10px !important;
  text-transform: uppercase;
  display: block;
}

.full-width{
  width:100%;
}

.forgot-password {
  display: table;
  margin: 30px auto 0;
  float: none;
}

.forgot-text {
  display: table;
  float: none;
  margin: 0 auto;
}

.dashboard {
  background: url('../images/dahsboard.jpg') no-repeat;
  background-size: 100%;
}

.headerwrapper:after {
    clear: both;
    display: block;
    content: '';
}

/*********************************** Calender *****************************************/

.responsive-calendar .controls {
  text-align: center;
}
.responsive-calendar .controls a {
  cursor: pointer;
}
.responsive-calendar .controls h4 {
  display: inline;
}
.responsive-calendar .day-headers,
.responsive-calendar .days {
  font-size: 0;
}
.responsive-calendar .day {
  display: inline-block;
  position: relative;
  font-size: 12px;
  width: 14.285714285714286%;
  text-align: center; border-left:1px solid #f5f5f5; border-bottom:1px solid #f2f2f2;
}
.responsive-calendar .day a {
  color: #000000;
  display: block;
  cursor: pointer;
  padding: 29% 0 0% 5%;
  text-align: left;
}
.responsive-calendar .day a:hover {
  background-color: #eee;
  text-decoration: none;
}
/* ... */

